fix(table): fix overflowing values for mobile

--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -29,6 +29,7 @@
   @media screen and (max-width : $breakpointMobileMax) {
     border-radius : 0;
     height        : 100%;
+    max-width     : none;
   }
 }
 
